force-app/main/default/objects/Account/fields/Patient_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Patient_Check_In__c</fullName>
    <description>Indicates whether the patient associated with the account has checked in for an appointment.</description>
    <defaultValue>false</defaultValue>
    <label>Patient Check In</label>
    <type>Checkbox</type>
</CustomField>