force-app/main/default/objects/Account/fields/Patient_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Patient_Discharged__c</fullName>
    <description>Indicates whether the patient associated with the account has been discharged.</description>
    <defaultValue>false</defaultValue>
    <label>Patient Discharged</label>
    <type>Checkbox</type>
</CustomField>