force-app/main/default/objects/Account/fields/Patient_s_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Birth_Date__c</fullName>
    <description>Denotes the date of birth of the patient.</description>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>