force-app/main/default/objects/Account/fields/Patient_s_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Status__c</fullName>
    <label>Patient&apos;s Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Patient</fullName>
                <default>true</default>
                <label>New Patient</label>
            </value>
            <value>
                <fullName>Currently In Bed</fullName>
            </value>
            <value>
                <fullName>Past Patient</fullName>
            </value>
            <value>
                <fullName>Denied Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>