force-app/main/default/objects/Account/fields/Policy_Holder_DOB_sec__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_DOB_sec__c</fullName>
    <label>Policy Holder DOB</label>
    <type>Date</type>
</CustomField>