force-app/main/default/objects/Account/fields/Policy_Holder_Name_sec__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name_sec__c</fullName>
    <label>Policy Holder Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>