force-app/main/default/objects/Account/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <description>Categorizes the patient preference, such as email etc. Used in a custom report type.</description>
    <label>Preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>