force-app/main/default/objects/Account/fields/Preferred_Language_1__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate patient with the record object, which stores the concept code of Preferred Languages.</description>
    <label>Preferred Language 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Preferred Language</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Accounts (Preferred Language 1)</relationshipLabel>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>