force-app/main/default/objects/Account/fields/Preliminary_Cause_of_death__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Cause_of_death__c</fullName>
    <description>Captures the preliminary cause of death for deceased account holders.</description>
    <label>Preliminary Cause of death</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>