force-app/main/default/objects/Account/fields/Previous_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address__c</fullName>
    <description>ONC Requirement</description>
    <label>Previous Address</label>
    <type>TextArea</type>
</CustomField>