force-app/main/default/objects/Account/fields/Previous_Level_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Previous_Level_of_Care__c</fullName>
    <label>Previous Level of Care</label>
    <length>100</length>
    <type>Text</type>
</CustomField>