force-app/main/default/objects/Account/fields/Primary_Care_Physician__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Physician__c</fullName>
    <description>Identifies the primary care physician assigned to the account.</description>
    <label>Primary Care Physician</label>
    <type>TextArea</type>
</CustomField>