force-app/main/default/objects/Account/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <description>Stores a reference or link to the profile picture associated with the account.</description>
    <label>Profile Picture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>