force-app/main/default/objects/Account/fields/Prospect_DOB_Dup_check__c.field-meta.xml
<CustomField>
    <fullName>Prospect_DOB_Dup_check__c</fullName>
    <label>Prospect DOB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>