force-app/main/default/objects/Account/fields/Race_2__c.field-meta.xml
<CustomField>
    <fullName>Race_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate patient with the record object, which stores the concept code of Race.</description>
    <label>Race 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Race</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Accounts (Race 2)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>