force-app/main/default/objects/Account/fields/Race_3__c.field-meta.xml
<CustomField>
    <fullName>Race_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate patient with the record object, which stores the concept code of Race.</description>
    <label>Race 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Race</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Accounts (Race 3)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>