force-app/main/default/objects/Account/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(ISPICKVAL(Account_Rating__c, &quot;5&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01561000001ktSB&quot;, &quot;high&quot;,15,75),
IF(ISPICKVAL(Account_Rating__c, &quot;4&quot;), IMAGE (&quot;/servlet/servlet.FileDownload?file=01561000001ktS6&quot;, &quot;high&quot;,18,60),
IF(ISPICKVAL(Account_Rating__c, &quot;3&quot;), IMAGE (&quot;/servlet/servlet.FileDownload?file=01561000001ktS1&quot;, &quot;high&quot;,18,45),
IF(ISPICKVAL(Account_Rating__c, &quot;2&quot;), IMAGE (&quot;/servlet/servlet.FileDownload?file=01561000001ktRw&quot;, &quot;high&quot;,15,30),
IF(ISPICKVAL(Account_Rating__c, &quot;1&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01561000001ktRr&quot;, &quot;high&quot;,15,15),null)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>