force-app/main/default/objects/Account/fields/Reason_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Reason_Ethnicity__c</fullName>
    <description>Represents the detailed description of the Ethnicity code.</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>