force-app/main/default/objects/Account/fields/Reason_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Reason_Preferred_Language__c</fullName>
    <description>Represents the detailed description of the preferred language code.</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>