force-app/main/default/objects/Account/fields/Reason_Race__c.field-meta.xml
<CustomField>
    <fullName>Reason_Race__c</fullName>
    <description>Represents the detailed description of the race code.</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>