force-app/main/default/objects/Account/fields/Reason_to_Decline_Race__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Decline_Race__c</fullName>
    <description>Reason need to specify for decline</description>
    <label>Reason to Decline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTH</fullName>
                <label>Something else, please describe</label>
            </value>
            <value>
                <fullName>UNK</fullName>
                <label>Don’t know</label>
            </value>
            <value>
                <fullName>ASKU</fullName>
                <label>Choose not to disclose</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>