force-app/main/default/objects/Account/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <description>This field is used to associate the reservation with the account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation ID</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>