force-app/main/default/objects/Account/fields/Reserved_bed__c.field-meta.xml
<CustomField>
    <fullName>Reserved_bed__c</fullName>
    <description>This field is used to associate the account holder with a specific bed.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed ID</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Reserved_beds</relationshipName>
    <type>Lookup</type>
</CustomField>