force-app/main/default/objects/Account/fields/Services_Requested__c.field-meta.xml
<CustomField>
    <fullName>Services_Requested__c</fullName>
    <description>Denotes the requested service by the account holder, such as Neurologist, Orthopedic Surgeon, ENT specialist, etc.</description>
    <label>Services Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Orthopedic Surgeon</fullName>
            </value>
            <value>
                <fullName>ENT specialist</fullName>
            </value>
            <value>
                <fullName>Ophthalmologist</fullName>
            </value>
            <value>
                <fullName>Pediatrician</fullName>
            </value>
            <value>
                <fullName>Endocrinologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>