force-app/main/default/objects/Account/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <description>Categorizes the patient's sexual type, such as Lesbian, gay or homosexual, Straight or heterosexual, etc.</description>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>38628009</fullName>
                <label>Lesbian, gay or homosexual</label>
            </value>
            <value>
                <fullName>20430005</fullName>
                <label>Straight or heterosexual</label>
            </value>
            <value>
                <fullName>42035005</fullName>
                <label>Bisexual</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Something else, please describe</label>
            </value>
            <value>
                <fullName>UNK</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>ASKU</fullName>
                <label>Choose not to disclose</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>