force-app/main/default/objects/Account/fields/Signature_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Attachment_Id__c</fullName>
    <description>Stores the unique id of the signature attachment associated with the account.</description>
    <label>Signature Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>