force-app/main/default/objects/Account/fields/SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SLAExpirationDate__c</fullName>
    <description>Represents the expiration date of the Service Level Agreement (SLA) for the account.</description>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>