force-app/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SLASerialNumber__c</fullName>
    <description>Records the serial number associated with the Service Level Agreement (SLA) for reference and tracking.</description>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>