force-app/main/default/objects/Account/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Represents the stage of the account within the healthcare process.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Current_Status_Of_Patient__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Contract Terminated</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Pre Admission</fullName>
                <default>true</default>
                <label>Pre Admission</label>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>