force-app/main/default/objects/Account/fields/Start_Date_of_authorization__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_authorization__c</fullName>
    <label>Start Date of authorization</label>
    <type>Date</type>
</CustomField>