force-app/main/default/objects/Account/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Represents the start date time of the care episode associated with the account.</description>
    <label>Start Date-Time</label>
    <type>DateTime</type>
</CustomField>