force-app/main/default/objects/Account/fields/Therapist_Name__c.field-meta.xml
<CustomField>
    <fullName>Therapist_Name__c</fullName>
    <label>Therapist Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>