force-app/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Represents the current time zone of the patient, such as EST, CST, MST, etc.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EST</fullName>
                <label>Eastern Standard Time</label>
            </value>
            <value>
                <fullName>CST</fullName>
                <label>Central Standard Time</label>
            </value>
            <value>
                <fullName>MST</fullName>
                <label>Mountain Standard Time</label>
            </value>
            <value>
                <fullName>PST</fullName>
                <label>Pacific Standard Time</label>
            </value>
            <value>
                <fullName>AST</fullName>
                <label>Alaska Standard Time</label>
            </value>
            <value>
                <fullName>A-HST</fullName>
                <label>Alaska-Hawaii Standard Time</label>
            </value>
            <value>
                <fullName>IST</fullName>
                <label>India Standard Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>