force-app/main/default/objects/Account/fields/Total_Number_of_days_approved__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_days_approved__c</fullName>
    <label>Total Number of days approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>