force-app/main/default/objects/Account/fields/Total_Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Responsibility__c</fullName>
    <description>Records the total financial responsibility assigned to the patient.</description>
    <label>Total Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>