force-app/main/default/objects/Account/fields/Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center__c</fullName>
    <description>This field is used to associate the treatment center with the account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Center</label>
    <referenceTo>Treatment_Center__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>