force-app/main/default/objects/Account/fields/Treatment_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center_Name__c</fullName>
    <description>Formula to record the treatment center name.</description>
    <formula>Treatment_Center__r.Treatment_center_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment Center Name</label>
    <type>Text</type>
</CustomField>