force-app/main/default/objects/Account/fields/Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Amount__c</fullName>
    <description>Denotes the unallocated financial amount associated with the account.</description>
    <label>Unallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>