force-app/main/default/objects/Account/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <description>Stores the verification code associated with the account.</description>
    <label>Verification Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>