force-app/main/default/objects/Account/recordTypes/Patient_Account.recordType-meta.xml
<RecordType>
    <fullName>Patient_Account</fullName>
    <active>true</active>
    <label>Patient Account</label>
</RecordType>