force-app/main/default/objects/Account/recordTypes/Referral_Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>Referral_Partner_Account</fullName>
    <active>true</active>
    <label>Referral Partner Account</label>
</RecordType>