force-app/main/default/objects/Account/recordTypes/Vendor_Account.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Account</fullName>
    <active>true</active>
    <label>Vendor Account</label>
</RecordType>