force-app/main/default/objects/Account/validationRules/noEthnicitySelected.validationRule-meta.xml
<ValidationRule>
    <fullName>noEthnicitySelected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Decline_to_Specify_Ethnicity__c,
OR(
NOT(ISBLANK( Ethnicity_1__c )) ,
NOT(ISBLANK( Ethnicity_2__c )) ,
NOT(ISBLANK( Ethnicity_3__c )) ,
NOT(ISBLANK( Ethnicity_4__c ))
)
)</errorConditionFormula>
    <errorMessage>If Ethnicity is specified, you cannot mark the patient Ethnicity as decline to specify</errorMessage>
</ValidationRule>