force-app/main/default/objects/Account/validationRules/noRaceSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>noRaceSelected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Decline_to_Specify_Race__c,
OR(
 NOT(ISBLANK( Race_1__c )) ,
 NOT(ISBLANK( Race_2__c )) ,
 NOT(ISBLANK( Race_3__c )) ,
 NOT(ISBLANK( Race_4__c )) 
)
)</errorConditionFormula>
    <errorMessage>If race is specified, you cannot mark the patient race as decline to specify</errorMessage>
</ValidationRule>