force-app/main/default/objects/Account/validationRules/provideReasonToDeclineEthnicity.validationRule-meta.xml
<ValidationRule>
    <fullName>provideReasonToDeclineEthnicity</fullName>
    <active>true</active>
    <description>If decline to specify checkbox is true then provide Reason to Decline</description>
    <errorConditionFormula>AND( NOT(Decline_to_Specify_Ethnicity__c) ,
NOT(ISBLANK(TEXT(Reason_to_Decline_Ethnicity__c)))
)</errorConditionFormula>
    <errorDisplayField>Decline_to_Specify_Ethnicity__c</errorDisplayField>
    <errorMessage>Decline to specify checkbox should be checked in case reason to decline is specified</errorMessage>
</ValidationRule>